src/test/ui/suggestions/issue-89064.stderr
error[E0107]: this associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-89064.rs:17:16
   |
LL |     let _ = A::foo::<S>();
   |                ^^^ expected 0 generic arguments
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-89064.rs:4:8
   |
LL |     fn foo() {}
   |        ^^^
help: remove these generics
   |
LL -     let _ = A::foo::<S>();
LL +     let _ = A::foo();
   |
help: consider moving this generic argument to the `A` trait, which takes up to 1 argument
   |
LL -     let _ = A::foo::<S>();
LL +     let _ = A::<S>::foo();
   |

error[E0107]: this associated function takes 0 generic arguments but 2 generic arguments were supplied
  --> $DIR/issue-89064.rs:22:16
   |
LL |     let _ = B::bar::<S, S>();
   |                ^^^ expected 0 generic arguments
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-89064.rs:8:8
   |
LL |     fn bar() {}
   |        ^^^
help: remove these generics
   |
LL -     let _ = B::bar::<S, S>();
LL +     let _ = B::bar();
   |
help: consider moving these generic arguments to the `B` trait, which takes up to 2 arguments
   |
LL -     let _ = B::bar::<S, S>();
LL +     let _ = B::<S, S>::bar();
   |

error[E0107]: this associated function takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-89064.rs:27:21
   |
LL |     let _ = A::<S>::foo::<S>();
   |                     ^^^----- help: remove these generics
   |                     |
   |                     expected 0 generic arguments
   |
note: associated function defined here, with 0 generic parameters
  --> $DIR/issue-89064.rs:4:8
   |
LL |     fn foo() {}
   |        ^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0107`.
